fix recipes not working before a /reload