@@ -258,11 +258,12 @@ public class ChemicalHelper {
     // TODO optimize this so it can be used in tooltips/etc.
     @Nullable
     public static UnificationEntry getOrComputeUnificationEntry(ItemLike itemLike) {
-        return ITEM_UNIFICATION_ENTRY_COLLECTED.computeIfAbsent(itemLike, item -> {
+        var value = ITEM_UNIFICATION_ENTRY_COLLECTED.computeIfAbsent(itemLike, item -> {
             Holder<Item> holder = BuiltInRegistries.ITEM.wrapAsHolder(item.asItem());
             return holder.tags().map(ChemicalHelper::getUnificationEntry).filter(Objects::nonNull)
-                    .filter(entry -> !(entry == UnificationEntry.EmptyMapMarkerEntry)).findFirst().orElse(null);
+                    .filter(entry -> !(entry == UnificationEntry.EmptyMapMarkerEntry)).findFirst().orElse(UnificationEntry.EmptyMapMarkerEntry);
         });
+        return value != UnificationEntry.EmptyMapMarkerEntry ? value : null;
     }
 
     public static List<ItemLike> getItems(UnificationEntry unificationEntry) {
@@ -284,7 +285,7 @@ public class ChemicalHelper {
     public static ItemStack get(UnificationEntry unificationEntry, int size) {
         var list = getItems(unificationEntry);
         if (list.isEmpty()) return ItemStack.EMPTY;
-        var stack = list.get(0).asItem().getDefaultInstance();
+        var stack = list.getFirst().asItem().getDefaultInstance();
         stack.setCount(size);
         return stack;
     }
